2016-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Structuring.pm: Remove 'use locale' directives for 
	older Perl versions.  There were subtle differences,
	for example whether German eszet uppercased to "SS" or
	itself.  It would also need the locale to be set and restored 
	everywhere it mattered.
	* tp/Texinfo/Structuring.pm (_do_index_strings): Call 
	utf8::upgrade on the index entry sort key.

2016-09-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm: Remove commented out "use POSIX" 
	declaration.
	* tp/Texinfo/Report.pm (gdt): Remove commented-out calls to 
	POSIX::setlocale.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Structuring.pm: Test perl version and only
	"use feature 'unicode_strings'" if perl version is at
	least 5.012.  Otherwise, "use locale;" and try to set a
	Latin-1 locale.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Fonts): More tests of fonts.  Add 
	section testing glyph commands.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Remove note about updating texi2html tests, 
	and note about building standalone modules for CPAN.  Move
	advice on updating web pages together.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Change version number 
	to "0" as (a) alphabetic characters in the version don't work 
	here, and (b) this saves us having to update the version here.
	* README-hacking: Remove note to update the version number in 
	these two files.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac, tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Bump version to 6.3dev.
	Remove "dist-xz" option for testing.
